# Nu-BF

./: Cargo.toml  rustfmt.toml
examples/compiled/: main
src/: analysis.rs  codegen.rs  copy_paste_dump.txt  main.rs  mandelbrot.nbf
src/analysis/: analysis.rs  mod.rs
src/codegen/: ir_gen.rs  mod.rs  preopt.rs
